# dctwflet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
src/: config.py  main.py
src/application/: __init__.py
src/application/services/: __init__.py  discovery_service.py  preference_service.py
src/domain/: __init__.py
src/domain/content/: __init__.py
src/domain/discovery/: __init__.py
src/domain/discovery/aggregates/: __init__.py  bot_collection.py  server_collection.py  template_collection.py
src/domain/discovery/entities/: __init__.py  bot.py  server.py  (+1 more)
src/domain/preferences/: __init__.py
src/domain/shared/: __init__.py  aggregate_root.py  domain_event.py  entity.py  exceptions.py  value_object.py
src/infrastructure/api/: __init__.py  dctw_api_client.py  http_client.py
src/infrastructure/cache/: __init__.py  cache_manager.py  json_cache.py  memory_cache.py
src/infrastructure/config/: __init__.py  constants.py  settings.py
src/infrastructure/di/: __init__.py  container.py
src/infrastructure/filesystem/: __init__.py  config_storage.py
src/infrastructure/image/: __init__.py  image_cache.py  image_server.py
src/infrastructure/repositories/: __init__.py  dctw_bot_repository.py  dctw_server_repository.py  dctw_template_repository.py  json_preferences_repository.py
src/presentation/: __init__.py  router.py  tag_mappings.py
src/presentation/pages/: __init__.py  bot_detail_page.py  bot_list_page.py  server_detail_page.py  server_list_page.py  settings_page.py  template_detail_page.py  template_list_page.py
(+21 files in other folders)
