[project]
name = "dctwflet"
version = "0.1.0"
description = "Taicoolah，讓宣傳 Discord 機器人、伺服器的平台變得太酷啦！"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "AvianJay", email = "avianjay@avianjay.sbs" }
]
dependencies = [
  "flet==0.28.3",
  "requests~=2.32.5",
  "flask~=3.1.2"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "tw.avianjay"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "DCTW"

# company name to display in about app dialogs
company = "AvianJay"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by AvianJay"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "requests~=2.32.5",
    "flask~=3.1.2"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}